fixes #5146 contrast on batch update checkboxes

--- a/assets/sass/tabler-fixes.scss
+++ b/assets/sass/tabler-fixes.scss
@@ -49,3 +49,9 @@ fieldset:empty {
         --litepicker-is-in-range-color: var(--tblr-primary-text-emphasis);
     }
 }
+
+/* fixes contrast of batch-update checkboxes - https://github.com/kimai/kimai/issues/5146 */
+.multiupdater[type=checkbox]
+{
+    --tblr-border-color-translucent: rgba(4, 32, 69, .2);
+}
